<resources>
    <string name="app_name">Guifena</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_sensor">Sensor</string>
    <string name="point_name">Point Name</string>
    <string name="sensor_status">Status</string>
    <string name="sensor_name">Sensor #%1$d</string>
    <string name="coordinate">Coordinate</string>
    <string name="online_status">Online</string>
    <string name="offline_status">Offline</string>
    <string name="incident_number">Insiden #%1$d</string>
    <string name="handled">Sedang Ditangani</string>
    <string name="not_handled">Belum Ditangani</string>
    <string name="waktu">Waktu</string>
    <string name="status">Status</string>
    <string name="sensor_01">Sensor 01</string>
    <string name="titik_1">Titik 1</string>
    <string name="timedummy">24 May 2021, 20:30 - WIB</string>
    <string name="incident_status">Status</string>
    <string name="need_handle">Perlu Ditangani</string>
    <string name="complete_handle">Masalah Selesai</string>
    <string name="title_edt_nama">Nama</string>
    <string name="hint_edt_atur_nama">Atur Nama</string>
    <string name="btn_simpan">SIMPAN</string>
</resources>