<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailIncident.DetailIncident">

    <TextView
        android:id="@+id/tv_sensor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/quicksand_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sensor_01" />

    <TextView
        android:id="@+id/tv_point_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/quicksand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sensor_name"
        android:textSize="16sp"
        android:text="@string/titik_1" />

    <ImageView
        android:id="@+id/iv_pin_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_point_name" />

    <TextView
        android:id="@+id/tv_coordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/iv_pin_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_point_name"
        android:text="@string/coordinate" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_coordinate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/quicksand_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:text="@string/waktu" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:textColor="@color/black"
        android:fontFamily="@font/quicksand"
        android:text="@string/timedummy" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/quicksand_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:text="@string/status" />

    <Button
        android:id="@+id/btn_status"
        android:layout_width="313dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:text="@string/need_handle"
        android:visibility="visible"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        android:textSize="19sp"
        android:textStyle="bold"
        android:fontFamily="@font/quicksand_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="305dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@color/yellow"
        android:elevation="2dp"
        android:text="@string/handled"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:textColor="@color/fadeBlack"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/green_shape"
        android:text="@string/complete_handle"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.79" />

</androidx.constraintlayout.widget.ConstraintLayout>